Updated and added documentation links